--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
 }
 
 #root{
-    background-color: aqua;
+    /* background-color: aqua; */
     /* height: 100vh; */
     width: 100vw;
     /* overflow-x: hidden; */
 }
 
-#root div h1{
-    font-size: 10vw;
+#root div{
+    background-color: aqua;
+    height: 100vh;
+    /* font-size: 10vw; */
 }
